滑动轮播图2

--- a/DOM/4_滑动轮播图.html
+++ b/DOM/4_滑动轮播图.html
@@ -25,12 +25,15 @@
             width:3750px;
             /* 清楚浮动塌陷 */
             overflow: hidden;
+            position: absolute;
+            left:0;
+            top:0;
+            /* 设置过渡效果 过渡属性 过渡执行时间 运动方式*/
+            transition: left 1s linear;
         }
         .img-box li{
             float: left;
         }
-
-
         /* 按钮和箭头 */
         #btn-box {
             position: absolute;
@@ -86,6 +89,36 @@
             <li id="next">&gt;</li>
         </ul>
     </div>
+    <script>
+        var btnBox = document.getElementById('btn-box');
+        var aLi = btnBox.getElementsByTagName('li');
+        // class返回的是数组[0]取到数组中索引是0
+        var imgBox =  document.getElementsByClassName('img-box')[0];
+
+        for(var i=0; i<aLi.length; i++){
+            aLi[i].index = i;
+            aLi[i].onclick = function(){
+
+                change(this.index);
+            }
+        }
+
+        function change(idx){
+            for(var i=0;i<aLi.length; i++){
+                aLi[i].className = ""
+            }
+            aLi[idx].className = "btn-active";
+            //    按钮索引  ul left
+            //     0       0
+            //     1       -1*750
+            //     2       -2*750
+            //     n       -n*750;
+            // 2图片滑到对应索引的位置  -ul定位
+            imgBox.style.left = -idx * 750 +"px";
+
+        }
+
+    </script>
 
 </body>
 </html>
