--- a/DOM/9_offsetWidth.html
+++ b/DOM/9_offsetWidth.html
@@ -32,6 +32,7 @@
         // oDiv.style.width = "100px";
         console.log(oDiv.style.width)
         console.log(oDiv.offsetParent)
+        console.log(oDiv.offsetWidth)
         
 
 
