--- a/DOM/10_放大镜/index.html
+++ b/DOM/10_放大镜/index.html
@@ -8,10 +8,13 @@
         #container{
             width: 400px;
             height: 400px;
-
+            position: relative;
         }
         #small-box{
             position: relative;
+            border:1px solid #ccc;
+            width: 400px;
+            height: 400px;
         }
         #small-box img{
             width: 400px;
@@ -27,6 +30,21 @@
             display: none;
             cursor: pointer;
         }
+        #big-box{
+            border:1px solid #ccc;
+            width: 400px;
+            height: 400px;
+            position: absolute;
+            left:410px;
+            top:0;
+            overflow: hidden;
+            display: none;
+        }
+        #big-img{
+            position: absolute;
+            left:0;
+            top:0;
+        }
     </style>
 </head>
 <body>
@@ -37,15 +55,18 @@
             <span id="drag"></span>
         </div>
         <div id="big-box">
-
+            <img id="big-img" src="images/2.jpg" alt="">
         </div>
     </div>
 
     <script>
         var smallBox = document.getElementById("small-box");
-        var drag = document.getElementById('drag')
+        var drag = document.getElementById('drag');
+        var bigImg = document.getElementById('big-img');
+        var bigBox = document.getElementById('big-box');
         smallBox.onmouseover = function(){
             drag.style.display = "inline";
+            bigBox.style.display ="block";
         }
 
         smallBox.onmousemove = function(e){
@@ -71,9 +92,21 @@
             // 给drag元素定位
             drag.style.left = iLeft +"px";
             drag.style.top = iTop +"px";
+
+            // 计算左侧drag 能走的最大距离 xMax
+
+            // 右边大图能走的最大距离大图宽度-容器宽度
+            var xBigMax = bigImg.offsetWidth - bigBox.offsetWidth;
+            var yBigMax = bigImg.offsetHeight - bigBox.offsetHeight;
+            // 大图应该定位的left 
+            var bigLeft = iLeft/xMax * xBigMax;
+            var bigTop = iTop/yMax * yBigMax;
+            bigImg.style.left = -bigLeft+"px";
+            bigImg.style.top = -bigTop+"px";
         }
         smallBox.onmouseout = function(){
             drag.style.display = "none";
+            bigBox.style.display = "none";
         }
         
     </script>
