--- a/DOM/10_放大镜/index.html
+++ b/DOM/10_放大镜/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         #container{
             width: 400px;
             height: 400px;
@@ -23,7 +27,7 @@
         #drag{
             width: 200px;
             height: 200px;
-            background: rgba(255,255,255,0.7);
+            background: rgba(0,0,0,0.7);
             position: absolute;
             left:0;
             top:0;
