--- a/css3/13_旋转的立方体/index.html
+++ b/css3/13_旋转的立方体/index.html
@@ -11,6 +11,7 @@
         }
         body{
             background: #000;
+            perspective: 800px;
         }
         #container{
             width: 200px;
@@ -18,7 +19,14 @@
             /* background: #ff0000; */
             margin:150px auto;
             position: relative;
-            perspective: 800px;
+            animation:run 2s linear infinite ;
+            /* 指定子元素定位在三维空间内 */
+            transform-style: preserve-3d;
+        }
+        @keyframes run{
+            100%{
+                transform: rotateY(360deg);
+            }
         }
         #container div{
             position: absolute;
@@ -67,6 +75,7 @@
         <div id="div5"></div>
         <div id="div6"></div>
     </div>
+
     
 </body>
 </html>
