--- a/css3/16_旋转合并照片墙/index.html
+++ b/css3/16_旋转合并照片墙/index.html
@@ -22,6 +22,7 @@
             position: absolute;
             left:-135px;
             top:-135px;
+            /* 过渡  属性  执行时间  运动方式  延迟时间*/
             transition: all 2s ease ;
         }
     </style>
@@ -124,6 +125,9 @@
             // i%6 + 1  
             // 0 6 12 18   1
             // 1 7 13 19   2
+            // 设置transiton延迟时间 0-23 
+
+            aLi[i].style.transitionDelay = (23-i)*100 +"ms";
             aLi[i].row = Math.floor(i/6)+1;
             aLi[i].col = i%6 +1;
             /*
@@ -141,10 +145,14 @@
             */
             var row = aLi[i].row;
             var col = aLi[i].col;
+            // 设置每个li的left top 和旋转角度
             aLi[i].style.top = row * spaceY + (row-1)*liHeight +"px";
             aLi[i].style.left = col * spaceX + (col-1)*liWidth +"px";
+            aLi[i].style.transform = "rotate("+(Math.random()*40-20)+"deg)";
         }
 
+        // 点击li的时候  位置合并
+        
     </script>
     
 </body>
