--- a/css3/16_旋转合并照片墙/index.html
+++ b/css3/16_旋转合并照片墙/index.html
@@ -25,81 +25,115 @@
             /* 过渡  属性  执行时间  运动方式  延迟时间*/
             transition: all 2s ease ;
         }
+        li span{
+            position: absolute;
+            left:0;
+            top:0;
+            right: 0;
+            bottom: 0;
+            background: #f00;
+            /* background: url(img/1.jpg) 0 0 no-repeat; */
+            opacity: 0;
+        }
     </style>
 </head>
 <body>
     <ul>
         <li>
             <img src="img/thumbs/1.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/2.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/3.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/4.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/5.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/6.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/7.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/8.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/9.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/10.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/11.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/12.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/13.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/14.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/15.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/16.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/17.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/18.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/19.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/20.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/21.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/22.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/23.jpg" alt="">
+            <span></span>
         </li>
         <li>
             <img src="img/thumbs/24.jpg" alt="">
+            <span></span>
         </li>
     </ul>
 
@@ -134,6 +168,8 @@
             aLi[i].style.transitionDelay = (23-i)*100 +"ms";
             aLi[i].row = Math.floor(i/6)+1;
             aLi[i].col = i%6 +1;
+            // 给每一个li添加索引
+            aLi[i].index = i;
             /*
                 行    top
                 1     1*spaceY
@@ -153,8 +189,8 @@
             aLi[i].style.top = row * spaceY + (row-1)*liHeight +"px";
             aLi[i].style.left = col * spaceX + (col-1)*liWidth +"px";
             aLi[i].style.transform = "rotate("+(Math.random()*40-20)+"deg)";
+            // 点击事件 = 函数（*不是函数的调用）
             aLi[i].onclick = fn;
-
         }
         function fn(){
             // 将所有li合并
@@ -167,6 +203,15 @@
                 aLi[i].style.left = spaceLeft + (aLi[i].col-1)*127 +"px";
                 aLi[i].style.top = spaceTop + (aLi[i].row -1)*127 +"px";
                 aLi[i].style.transform = "rotate(0deg)";
+                // 获取li中的span
+                var oSpan = aLi[i].getElementsByTagName('span')[0];
+                oSpan.style.opacity = 1;
+                // 如果点击的li的索引 this.index ->显示哪个大图 
+                var num = this.index+1;
+                var left = -(aLi[i].col-1)*125;
+                var top = -(aLi[i].row-1)*125;
+                oSpan.style.background = "url(img/"+num+".jpg) "+left+"px "+top+"px no-repeat";
+                // oSpan.style.background = "url(img/"+(this.index+1)+".jpg) "+(-(col-1)*125)+"px "+(-(row-1)*125)+"px no-repeat";
             }
         }
 
