--- a/css3/16_旋转合并照片墙/index.html
+++ b/css3/16_旋转合并照片墙/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
-        body{
+
+        body {
             background: url(img/bg.jpg);
         }
-        ul{
+
+        ul {
             list-style: none;
         }
-        li{
+
+        li {
             width: 125px;
             height: 125px;
-            border:5px solid #fff;
+            border: 5px solid #fff;
             position: absolute;
-            left:-135px;
-            top:-135px;
+            left: -135px;
+            top: -135px;
             /* 过渡  属性  执行时间  运动方式  延迟时间*/
-            transition: all 2s ease ;
+            transition: all 2s ease;
         }
-        li span{
+
+        li span {
             position: absolute;
-            left:0;
-            top:0;
+            left: 0;
+            top: 0;
             right: 0;
             bottom: 0;
             background: #f00;
@@ -37,6 +42,7 @@
         }
     </style>
 </head>
+
 <body>
     <ul>
         <li>
@@ -147,14 +153,15 @@
         var screenHeight = document.documentElement.clientHeight || document.body.clientHeight;
         var screenWidth = document.documentElement.clientWidth || document.body.clientWidth;
         // 计算垂直方向空隙的值
-        var spaceY = (screenHeight - 4*liHeight)/5;
-         // 计算水平方向空隙的值
-        var spaceX = (screenWidth -6*liWidth)/7;
+        var spaceY = (screenHeight - 4 * liHeight) / 5;
+        // 计算水平方向空隙的值
+        var spaceX = (screenWidth - 6 * liWidth) / 7;
         // 合并后左边和上边的空隙值
-        var spaceLeft = (screenWidth - 6*127)/2;
-        var spaceTop = (screenHeight - 4*127)/2;
-
-        for(var i=0; i<aLi.length; i++){
+        var spaceLeft = (screenWidth - 6 * 127) / 2;
+        var spaceTop = (screenHeight - 4 * 127) / 2;
+        // 记录打开ture|合并false的状态 
+        var flag = true;
+        for (var i = 0; i < aLi.length; i++) {
             //根据索引推断所在行 Math.floor(i/6)+1
             // 0-5    1 
             // 6-11   2 
@@ -165,9 +172,9 @@
             // 1 7 13 19   2
             // 设置transiton延迟时间 0-23 
 
-            aLi[i].style.transitionDelay = (23-i)*100 +"ms";
-            aLi[i].row = Math.floor(i/6)+1;
-            aLi[i].col = i%6 +1;
+            aLi[i].style.transitionDelay = (23 - i) * 100 + "ms";
+            aLi[i].row = Math.floor(i / 6) + 1;
+            aLi[i].col = i % 6 + 1;
             // 给每一个li添加索引
             aLi[i].index = i;
             /*
@@ -186,38 +193,53 @@
             var row = aLi[i].row;
             var col = aLi[i].col;
             // 设置每个li的left top 和旋转角度
-            aLi[i].style.top = row * spaceY + (row-1)*liHeight +"px";
-            aLi[i].style.left = col * spaceX + (col-1)*liWidth +"px";
-            aLi[i].style.transform = "rotate("+(Math.random()*40-20)+"deg)";
+            aLi[i].style.top = row * spaceY + (row - 1) * liHeight + "px";
+            aLi[i].style.left = col * spaceX + (col - 1) * liWidth + "px";
+            aLi[i].style.transform = "rotate(" + (Math.random() * 40 - 20) + "deg)";
             // 点击事件 = 函数（*不是函数的调用）
             aLi[i].onclick = fn;
         }
-        function fn(){
-            // 将所有li合并
-            for(var i=0; i<aLi.length; i++){
-                // 将所有li的延迟时间去掉
-                aLi[i].style.transitionDelay = "0ms";
-                // 合并 
-                // 修改元素的边框为1px
-                aLi[i].style.borderWidth = "1px";
-                aLi[i].style.left = spaceLeft + (aLi[i].col-1)*127 +"px";
-                aLi[i].style.top = spaceTop + (aLi[i].row -1)*127 +"px";
-                aLi[i].style.transform = "rotate(0deg)";
-                // 获取li中的span
-                var oSpan = aLi[i].getElementsByTagName('span')[0];
-                oSpan.style.opacity = 1;
-                // 如果点击的li的索引 this.index ->显示哪个大图 
-                var num = this.index+1;
-                var left = -(aLi[i].col-1)*125;
-                var top = -(aLi[i].row-1)*125;
-                oSpan.style.background = "url(img/"+num+".jpg) "+left+"px "+top+"px no-repeat";
-                // oSpan.style.background = "url(img/"+(this.index+1)+".jpg) "+(-(col-1)*125)+"px "+(-(row-1)*125)+"px no-repeat";
+        function fn() {
+            if (flag) { //如果flag为true 那么当前是散开的状态 ->设置成合并操作
+                // 将所有li合并
+                for (var i = 0; i < aLi.length; i++) {
+                    // 将所有li的延迟时间去掉
+                    aLi[i].style.transitionDelay = "0ms";
+                    // 合并 
+                    // 修改元素的边框为1px
+                    aLi[i].style.borderWidth = "1px";
+                    aLi[i].style.left = spaceLeft + (aLi[i].col - 1) * 127 + "px";
+                    aLi[i].style.top = spaceTop + (aLi[i].row - 1) * 127 + "px";
+                    aLi[i].style.transform = "rotate(0deg)";
+                    // 获取li中的span
+                    var oSpan = aLi[i].getElementsByTagName('span')[0];
+                    oSpan.style.opacity = 1;
+                    // 如果点击的li的索引 this.index ->显示哪个大图 
+                    var num = this.index + 1;
+                    var left = -(aLi[i].col - 1) * 125;
+                    var top = -(aLi[i].row - 1) * 125;
+                    oSpan.style.background = "url(img/" + num + ".jpg) " + left + "px " + top + "px no-repeat";
+                    // oSpan.style.background = "url(img/"+(this.index+1)+".jpg) "+(-(col-1)*125)+"px "+(-(row-1)*125)+"px no-repeat";
+                }
+            } else {
+                // 散开
+                for (var i = 0; i < aLi.length; i++) {
+                    // 设置每个li的left top 和旋转角度
+                    aLi[i].style.top = aLi[i].row * spaceY + (aLi[i].row - 1) * liHeight + "px";
+                    aLi[i].style.left = aLi[i].col * spaceX + (aLi[i].col - 1) * liWidth + "px";
+                    aLi[i].style.transform = "rotate(" + (Math.random() * 40 - 20) + "deg)";
+                    aLi[i].style.borderWidth = "5px";
+                    var oSpan = aLi[i].getElementsByTagName('span')[0];
+                    oSpan.style.opacity = "0";
+                }
             }
+            flag = !flag;
         }
 
 
-        
+
     </script>
-    
+
 </body>
+
 </html>
