--- a/移动端/仿美团/index.html
+++ b/移动端/仿美团/index.html
@@ -5,16 +5,31 @@
     <meta name="viewport" content="initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, width=device-width, user-scalable=no">
     <title>Document</title>
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="font/iconfont.css">
     <link rel="stylesheet" href="css/index.css">
+
     <script src="rem.js"></script>
 </head>
 <body>
     <div class="header">
         <div class="city">哈尔滨</div>
         <div class="search-box">
-            <span>请输入商家名、品类</span>
+            <img src="https://p0.meituan.net/travelcube/99c29829cf1b85d5cdbc76a1bd0b7329814.png" alt="">
+            <span>请输入商家名、品类名称、等</span>
         </div>
-        <div class="mine">我的</div>
+        <div class="mine">
+            <span class="iconfont icon-wode"></span>
+        </div>
+    </div>
+    <div class="banner">
+        <img class="logo" src="images/test.png" alt="">
+        <div class="text-box">
+            <p>省钱利器 购物超划算</p>
+            <p>吃喝玩乐尽在美团</p>
+        </div>
+        <a href="#" class="btn">
+            去APP
+        </a>
     </div>
 </body>
 </html>
