--- a/移动端/仿美团/index.html
+++ b/移动端/仿美团/index.html
@@ -31,5 +31,39 @@
             去APP
         </a>
     </div>
+    <ul class="list-box">
+        <li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li>
+        <li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li><li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li><li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li><li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li><li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li><li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li><li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li><li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li><li class="list">
+            <span class="iconfont icon-canju"></span>
+            <p>美食</p>
+        </li>
+    </ul>
 </body>
 </html>
