--- a/移动端/仿美团/index.html
+++ b/移动端/仿美团/index.html
@@ -65,5 +65,39 @@
             <p>美食</p>
         </li>
     </ul>
+    <!-- 商品列表 -->
+    <ul class="pro-list-box">
+        <li class="pro-list">
+            <img src="//p0.meituan.net/200.0/dpdeal/4294622a56969bf913524e1b06198cfb392704.jpg" alt="">
+            <div class="pro-list-info">
+                <h3>花开相爱</h3>
+                <div>[三大动力/三合路](未来可期）向日葵玫瑰混搭韩式花束（1527）</div>
+                <div>
+                    <span>158</span>
+                </div>
+            </div>
+        </li>
+        <li class="pro-list">
+            <img src="//p0.meituan.net/200.0/dpdeal/4294622a56969bf913524e1b06198cfb392704.jpg" alt="">
+            <div class="pro-list-info">
+                <h3>花开相爱</h3>
+                <div>[三大动力/三合路](未来可期）向日葵玫瑰混搭韩式花束（1527）</div>
+                <div>
+                    <span>158</span>
+                </div>
+            </div>
+        </li>
+        <li class="pro-list">
+            <img src="//p0.meituan.net/200.0/dpdeal/4294622a56969bf913524e1b06198cfb392704.jpg" alt="">
+            <div class="pro-list-info">
+                <h3>花开相爱</h3>
+                <div>[三大动力/三合路](未来可期）向日葵玫瑰混搭韩式花束（1527）</div>
+                <div>
+                    <span>158</span>
+                </div>
+            </div>
+        </li>
+
+    </ul>
 </body>
 </html>
