--- a/ES6/3_解构赋值.html
+++ b/ES6/3_解构赋值.html
@@ -75,8 +75,57 @@
         // const {name, age} = foo();
         // console.log(name, age);
 
+        // const arr = ['html', 'css', 'js', 'xxx']
+        // const [a, b, c, d='es6'] = arr;
+        // console.log(a, b, c, d);
+
+        // const obj = {
+        //     name: 'es6',
+        //     year: 2015,
+        // };
+
+        // const {name, year} = obj;
+        // console.log(name, year);
+
+        // function foo({ year, name}){
+        //     console.log(name, year);
+        // }
+        // foo(obj);
+
+        // function foo(){
+        //     console.log(123);
+        // }
+        // const [a=foo()] = [1];
+
+        let a = 5;
+        let b = 6;
+
+        // let temp = a; // temp=5
+        // a = 6; // a = 6
+        // b = temp; // b = 5
+        // console.log(a, b);
+        
+        // a = a + b; // a = 11
+        // b = a - b; // b = 5
+        // a = a - b;
+        // console.log(a,b);
+        // [b, a] = [a, b];
+        // console.log(a, b);
+
+        // JSON
+        // const jsonStr = '{"name": "xiecheng", "age": 35}';
+
+        
+
+
+
 
     </script>
 </body>
 
 </html>
+
+<!-- <userInfo>
+     <name>xiecheng</name>
+     <age>35</age>
+</userInfo> -->
