--- a/ES6/5_数组遍历.html
+++ b/ES6/5_数组遍历.html
@@ -84,25 +84,25 @@
         //     console.log('xxxx');
         // };
         // arr.push(123);
-        // console.log(arr);
+        // // console.log(arr);
         // arr.xxx();
 
         // for(let index in arr){
         //     console.log(index, arr[index]);
         // }
 
-        const obj = {
-            name: 'xc',
-            age: 35
-        };
-        // console.log('obj');
-        for(let prop in obj){
-            console.log(prop, typeof prop);
-            console.log(obj[prop]);
-        }
+        // const obj = {
+        //     name: 'xc',
+        //     age: 35
+        // };
+        // // // console.log('obj');
+        // for(let prop in obj){
+        //     // console.log(obj.prop);
+        //     console.log(obj[prop]);
+        // }
         // console.log(obj.age);
-        // console.log(obj[age]);
-        console.log( arr instanceof Array);
+        // console.log(obj['age']);
+        // console.log( arr instanceof Array);
 
 
     </script>
