--- a/mywebpack/src/index.html
+++ b/mywebpack/src/index.html
@@ -10,5 +10,6 @@
     <h1>hello world 你好123</h1>
     <h2>scss</h2>
     <div class="box"></div>
+    <input type="text" placeholder="请输入用户名">
 </body>
 </html>
