--- a/mywebpack/src/index.html
+++ b/mywebpack/src/index.html
@@ -10,6 +10,7 @@
     <h1>hello world 你好123</h1>
     <h2>scss</h2>
     <div class="box"></div>
+    <div class="div1"></div>
     <input type="text" placeholder="请输入用户名">
 </body>
 </html>
