--- a/vue/练习1-商品列表-静态效果.html
+++ b/vue/练习1-商品列表-静态效果.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="./js/vue.js"></script>
     <style>
         .container {
             padding: 50px 0;
@@ -30,15 +31,15 @@
         <form>
             <div class="form-row align-items-center">
                 <div class="col-auto">
-                    <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="请输入商品名称">
+                    <input v-model="goodsName" type="text" class="form-control mb-2" id="inlineFormInput" placeholder="请输入商品名称">
                 </div>
                 <div class="col-auto">
                     <div class="input-group mb-2">
-                        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="请输入商品价格">
+                        <input v-model="goodsPrice" type="text" class="form-control" id="inlineFormInputGroup" placeholder="请输入商品价格">
                     </div>
                 </div>
                 <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-2">添加</button>
+                    <button type="submit" class="btn btn-primary mb-2" @click.prevent="addHandle">添加</button>
                 </div>
             </div>
         </form>
@@ -53,14 +54,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr v-for="val in dataList">
                         <th scope="row">
                             <input type="checkbox" name="" id="">
                         </th>
-                        <td>衣服</td>
-                        <td>100</td>
+                        <td>{{val.title}}</td>
+                        <td>{{val.price}}</td>
                         <td>
-                            <button type="button" class="btn btn-primary btn-sm">删除</button>
+                            <button type="button" class="btn btn-primary btn-sm" @click="delHandle(val.id)">删除</button>
                         </td>
                     </tr>
                     
@@ -74,6 +75,51 @@
             </table>
         </div>
     </div>
+    <script>
+        new Vue({
+            el:".container",
+            data:{
+                goodsPrice:"",
+                goodsName:"",
+                dataList:[
+                    {
+                        id:1001,
+                        title:"衣服",
+                        price:100
+                    },
+                    {
+                        id:1002,
+                        title:"裤子",
+                        price:200
+                    },
+                    {
+                        id:1003,
+                        title:"鞋子",
+                        price:300
+                    }
+                ]
+            },
+            methods: {
+                // 添加操作
+                addHandle(){
+                    this.dataList.push({
+                        title:this.goodsName,
+                        price:this.goodsPrice
+                    })
+                },
+                // 删除处理
+                delHandle(id){
+                    console.log(id);
+                    let newList = this.dataList.filter((item)=>{
+                        if(item.id != id){
+                            return item
+                        }
+                    })
+                    this.dataList = newList;
+                }
+            },
+        })
+    </script>
 </body>
 
 </html>
