--- a/vue/4-vfor.html
+++ b/vue/4-vfor.html
@@ -13,7 +13,7 @@
             <!-- <li v-for=" val in str ">
                 {{val}}
             </li> -->
-            <li v-for=" val in person ">
+            <li v-bind:class="val.name" v-for=" val in person ">
                 姓名:{{val.name}}  ---- 年龄:{{val.age}}
             </li>
         </ul>
